--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Exo:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@600&family=Manrope&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;600&display=swap');
 
 @tailwind base;
 @tailwind components;
